--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ requests
 requests_cache
 numpy
 scipy
-pillow
+# pillow
 wordcloud
 beautifulsoup4
 boto3
 flask
 bjoern
 boto3_type_annotations
+matplotlib
