add mongodb support for database

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Possible options: MONGO ; DYNAMO
+DATABASE=MONGO
+
+# FOR MONGO ONLY
+MONGO_CONNECTION_STRING=
+
 # -- AWS CLIENT CONFIGURATION -- #
 #
 #        Used for DynamoDB       #
