--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pymongo
 requests
 requests_cache
 wordcloud
@@ -9,4 +10,5 @@ numpy
 flask
 bjoern
 boto3_type_annotations
+dnspython
 https://files.pythonhosted.org/packages/5b/bb/cdc8086db1f15d0664dd22a62c69613cdc00f1dd430b5b19df1bea83f2a3/Pillow-6.2.1.tar.gz
