--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 
 services:
     web:
+        restart: always
         build: .
         working_dir: /usr/src/app/
         command: python -u server.py
