--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ bjoern
 boto3_type_annotations
 dnspython
 https://files.pythonhosted.org/packages/3e/02/b09732ca4b14405ff159c470a612979acfc6e8645dc32f83ea0129709f7a/Pillow-7.2.0.tar.gz
+fonttools
