--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ pymongo
 requests
 requests_cache
 wordcloud
-# https://github.com/amueller/word_cloud/archive/1.7.0.tar.gz
-beautifulsoup4
 boto3
 matplotlib
 scipy
@@ -12,5 +10,5 @@ flask
 bjoern
 boto3_type_annotations
 dnspython
-https://files.pythonhosted.org/packages/3e/02/b09732ca4b14405ff159c470a612979acfc6e8645dc32f83ea0129709f7a/Pillow-7.2.0.tar.gz
+pillow~=8.1.0
 fonttools
