--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
-pymongo
-requests
+pymongo~=3.11.3
+requests~=2.25.1
 requests_cache
-wordcloud
-boto3
+wordcloud~=1.8.1
+boto3~=1.17.0
 matplotlib
-scipy
-numpy
-flask
-bjoern
+scipy~=1.6.0
+numpy~=1.20.0
+flask~=1.1.2
+bjoern~=3.1.0
 boto3_type_annotations
 dnspython
 pillow~=8.1.0
 fonttools
 git+https://github.com/tooxo/api-commons.git
 python-dateutil
+typing~=3.7.4.1
+fastapi~=0.61.2
+uvicorn~=0.13.3
+aiosqlite~=0.16.1
+aiohttp~=3.6.2
+asyncio-pool
+motor
