--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         restart: always
         build: .
         working_dir: /usr/src/app/
-        command: python -u server.py
+        command: python -u server_async.py
         init: true
         ports:
             - 8888:8888
