--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 wordcloud~=1.8.1
 matplotlib
-scipy~=1.6.0
-numpy~=1.20.0
+scipy==1.9.3
+numpy==1.23.5
 dnspython
-pillow~=8.1.0
+pillow==9.3.0
 fonttools
 git+https://github.com/tooxo/api-commons.git
 python-dateutil
-fastapi~=0.61.2
-uvicorn~=0.13.3
-aiosqlite~=0.16.1
-aiohttp~=3.6.2
+fastapi==0.87.0
+uvicorn==0.20.0
+aiosqlite==0.17.0
+aiohttp==3.8.3
 asyncio-pool
-chardet<4.0.0
+chardet==5.0.0
 motor
-aiofiles~=0.6.0
+aiofiles==22.1.0
 jinja2
